--- a/style.css
+++ b/style.css
@@ -154,3 +154,73 @@ form .field input:focus::placeholder {
 #click {
   display: none;
 }
+
+#chatList::-webkit-scrollbar {
+  display: none;
+}
+#chatList {
+  max-height: 500px;
+  max-width: 400px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0px;
+  display: flex;
+  flex-direction: column; /* Ensure messages stack vertically */
+  justify-content: flex-end; /* Align messages to the bottom */
+  display: none;
+}
+/* Define styles for the custom scrollbar thumb */
+#chatList::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+/* Define styles for the custom scrollbar track */
+#chatList::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.message {
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  max-width: 70%; /* Adjust the width as needed */
+}
+
+.receiver {
+  background-color: #f2f2f2;
+  align-self: flex-start;
+}
+
+.sender {
+  background-color: #007bff;
+  color: white;
+  align-self: flex-end;
+  border-radius: 8px; /* Apply border radius to sender messages */
+  margin-left: auto; /* Push sender messages to the right */
+  text-align: right;
+}
+
+#sendMessageForm {
+  margin-top: 10px;
+}
+
+#messageInput {
+  width: calc(100% - 70px); /* Adjust based on the width of the button */
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#sendMessageForm button {
+  width: 60px;
+  padding: 8px;
+  border: none;
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#sendMessageForm button:hover {
+  background-color: #0056b3;
+}
